feat:Added connection type for multitenancy
